Address PR comments
1. Use 'https' scheme with `.loopback()`, similar to other tests.

2. Drop reflection to access the connection and the cached header
   buffer.  Instead add accessor methods to HttpClientImplAccess that
   fetch these members and use them in the tests.